fix: broken styles and align to all neutral

--- a/apps/studio/src/app/globals.css
+++ b/apps/studio/src/app/globals.css
@@ -1,13 +1,15 @@
-@tailwind base;
-
 @import '@commonalityco/config-tailwind/globals.css';
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @layer base {
   body {
-    @apply text-sm;
+    @apply text-sm bg-background text-foreground;
   }
 
   * {
-    @apply border-border
+    @apply border-border;
   }
 }
